# vp-analysis-api

./: .gitignore  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  check_code.py  pyproject.toml
.github/workflows/: build-package.yml  python-publish.yml
examples/: basic_examples.ipynb  first_release_vs_revised_data.ipynb  get_security_factors.ipynb  install_package.ipynb  introduction.ipynb  model_api_fast_money.ipynb  model_api_lppl.ipynb  single_stock_factors.ipynb  spx_fast_money.ipynb
examples/data/: AAPL.csv  BrentOil.csv
src/vp_analysis_api/: VPAnalysisAPI.py  __init__.py
