[project]
name = "vp-analysis-api"
version = "0.1.0"
authors = [
  { name="Variant Perception", email="systems@variantperception.com" },
]
description = "API to access Variant Perception's data and models"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "api",
    "data",
    "models",
    "variant perception",
]
dependencies = [
    "pandas>=1.5.3",
    "httpx[http2]>=0.24.0",
    "pyarrow>=12.0.0",
    "python-dateutil>=2.8.2",
    "typing-extensions>=4.5.0",
    "matplotlib"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "ruff>=0.0.270",
    "hatchling>=1.18.0"
]

[project.urls]
Homepage = "https://github.com/variantperception/vp-analysis-api"
Issues = "https://github.com/variantperception/vp-analysis-api/issues"
Documentation = "https://api.variantperception.com/docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 99
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 99
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disable_error_code = ["import-untyped"]

[tool.ruff]
line-length = 99
target-version = "py38"
