[project]
name = "vp-analysis-api"
version = "1.1.0"
authors = [
  { name="Variant Perception", email="systems@variantperception.com" },
]
description = "API to access Variant Perception's data and models"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "api",
    "data",
    "models",
    "variant perception",
]
dependencies = [
    "pandas",
    "httpx[http2]",
    "pyarrow",
    "python-dateutil",
    "typing-extensions",
    "matplotlib"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
    "ruff",
    "hatchling"
]

[project.urls]
Homepage = "https://github.com/variantperception/vp-analysis-api"
Issues = "https://github.com/variantperception/vp-analysis-api/issues"
Documentation = "https://api.variantperception.com/docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disable_error_code = ["import-untyped"]

[tool.ruff]
line-length = 120
target-version = "py312"
